nat.tf
# 1. Crear un Router Virtual en nuestra VPC
resource "google_compute_router" "router" {
  name    = "router-proyecto-asir"
  region  = "europe-southwest1"
  network = google_compute_network.vpc_asir.id
}

# 2. Configurar el Cloud NAT asociado al Router para la subred privada
resource "google_compute_router_nat" "nat" {
  name                               = "nat-proyecto-asir"
  router                             = google_compute_router.router.name
  region                             = google_compute_router.router.region
  nat_ip_allocate_option             = "AUTO_ONLY"
  source_subnetwork_ip_ranges_to_nat = "LIST_OF_SUBNETWORKS"

  subnetwork {
    name                    = google_compute_subnetwork.subred_privada.id
    source_ip_ranges_to_nat = ["ALL_IP_RANGES"]
  }
}
